[package]
name = "salesforce-exporter"
version = "0.1.1"
description = "Bulk export of Salesforce data to Parquet"
repository = "https://github.com/openjusticeok/salesforce-exporter"
keyword = ["salesforce", "parquet"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
edition = "2024"
exclude = [".*", "flake.*"]

[dependencies]
anyhow = "1.0.102"
arrow = "54.3.0"
async-trait = "0.1"
cirrus = "0.1.0"
jiff = "0.2"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3"
parquet = "54.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
